@@ -1939,6 +1939,9 @@ ui.plugin.analysis.GeometryFunction.Densify = Densify
 ui.plugin.analysis.GeometryFunction.Envelope = Envelope
 ui.plugin.analysis.GeometryFunction.Line-Merge = Line Merge
 ui.plugin.analysis.GeometryFunction.Line-Sequence = Line Sequence
+ui.plugin.analysis.GeometryFunction.Minimum-Bounding-Circle = Minimum Bounding Circle
+ui.plugin.analysis.GeometryFunction.Minimum-Bounding-Rectangle = Minimum Bounding Rectangle
+ui.plugin.analysis.GeometryFunction.Minimum-Diameter = Minimum Diameter
 ui.plugin.analysis.GeometryFunction.Polygonize = Polygonize
 ui.plugin.analysis.GeometryFunction.Reverse-Line-Direction = Reverse Line Direction
 ui.plugin.analysis.GeometryFunction.Simplifies-a-geometry-using-the-Douglas-Peucker-algorithm = Simplifies a geometry using the Douglas-Peucker algorithm.
