@@ -2282,3 +2282,6 @@ ui.zoom.ZoomToCoordinatePlugIn.enter-coordinate-to-zoom-to = Vlo\u017ete sou\u01
 ui.zoom.ZoomTool.zoom-in-out = P\u0159ibl\u00ed\u017eit / Odd\u00e1lit
 ui.AboutDialog.maximum-memory = Maxim\u00e1ln\u00ed pam\u011b\u0165
 ui.AttributeTab.pan-to-selected-rows=\#T\:Pan to selected rows
+ui.plugin.analysis.GeometryFunction.Minimum-Bounding-Circle=\#T\:Minimum Bounding Circle
+ui.plugin.analysis.GeometryFunction.Minimum-Bounding-Rectangle=\#T\:Minimum Bounding Rectangle
+ui.plugin.analysis.GeometryFunction.Minimum-Diameter=\#T\:Minimum Diameter
