@@ -2282,3 +2282,6 @@ ui.zoom.ZoomToCoordinatePlugIn.enter-coordinate-to-zoom-to = Koordinate zu der g
 ui.zoom.ZoomTool.zoom-in-out = Ein- und Auszoomen
 ui.AboutDialog.maximum-memory = maximaler Speicher
 ui.AttributeTab.pan-to-selected-rows=\#T\:Pan to selected rows
+ui.plugin.analysis.GeometryFunction.Minimum-Bounding-Circle=\#T\:Minimum Bounding Circle
+ui.plugin.analysis.GeometryFunction.Minimum-Bounding-Rectangle=\#T\:Minimum Bounding Rectangle
+ui.plugin.analysis.GeometryFunction.Minimum-Diameter=\#T\:Minimum Diameter
