@@ -2269,3 +2269,6 @@ ui.zoom.ZoomPreviousPlugIn.already-at-start=Ya al inicio
 ui.zoom.ZoomToCoordinatePlugIn.enter-coordinate-to-zoom-to=Introducir coordenadas para zoom\:
 ui.zoom.ZoomTool.zoom-in-out=Acercar/Alejar
 ui.AttributeTab.pan-to-selected-rows=Pan a las filas seleccionadas
+ui.plugin.analysis.GeometryFunction.Minimum-Bounding-Circle=\#T\:Minimum Bounding Circle
+ui.plugin.analysis.GeometryFunction.Minimum-Bounding-Rectangle=\#T\:Minimum Bounding Rectangle
+ui.plugin.analysis.GeometryFunction.Minimum-Diameter=\#T\:Minimum Diameter
