@@ -2266,3 +2266,6 @@ ui.zoom.ZoomPreviousPlugIn.already-at-start=T\u00e4m\u00e4 on jo alussa
 ui.zoom.ZoomToCoordinatePlugIn.enter-coordinate-to-zoom-to=Anna koordinaatit, joihin kohdistetaan\:
 ui.zoom.ZoomTool.zoom-in-out=L\u00e4henn\u00e4/Loitonna
 ui.AttributeTab.pan-to-selected-rows=\#T\:Pan to selected rows
+ui.plugin.analysis.GeometryFunction.Minimum-Bounding-Circle=\#T\:Minimum Bounding Circle
+ui.plugin.analysis.GeometryFunction.Minimum-Bounding-Rectangle=\#T\:Minimum Bounding Rectangle
+ui.plugin.analysis.GeometryFunction.Minimum-Diameter=\#T\:Minimum Diameter
