@@ -1064,7 +1064,7 @@ org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.paint-line = Affic
 org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.paint-summary-area = Afficher la surface ?
 org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.paint-summary-length = Afficher la longueur ?
 org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.paint-vertex = Afficher les points?
-org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.paint-vertex-distance = Afficher la distance des points a d\u00E9but ?
+org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.paint-vertex-distance = Afficher la distance des points \u00e0 partir du d\u00E9but ?
 org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.paint-vertex-distance-relative = Afficher la distance entre les points ?
 org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.summary = Longueur et surface totales
 org.openjump.core.ui.plugin.tools.AdvancedMeasureOptionsPanel.vertex = Point
@@ -1777,7 +1777,7 @@ ui.plugin.LayerStatisticsPlugIn.avg = Moyenne
 ui.plugin.LayerStatisticsPlugIn.components = Composants
 ui.plugin.LayerStatisticsPlugIn.envelope = Enveloppe\:
 ui.plugin.LayerStatisticsPlugIn.holes = Trous
-ui.plugin.LayerStatisticsPlugIn.layer = Couche\:\
+ui.plugin.LayerStatisticsPlugIn.layer = Couche\:\u0020
 ui.plugin.LayerStatisticsPlugIn.layer-statistics = Statistiques de la couche
 ui.plugin.LayerStatisticsPlugIn.length = Longueur
 ui.plugin.LayerStatisticsPlugIn.summary-for-all-layers = R\u00e9sum\u00e9\u00a0pour toutes les couches
@@ -2280,3 +2280,6 @@ ui.zoom.ZoomToCoordinatePlugIn.enter-coordinate-to-zoom-to = Entrez les coordonn
 ui.zoom.ZoomTool.zoom-in-out = Zoom Avant/Arri\u00e8re
 ui.AboutDialog.maximum-memory = M\u00e9moire maximum
 ui.AttributeTab.pan-to-selected-rows=Centrer sur les objets s\u00e9lectionn\u00e9s
+ui.plugin.analysis.GeometryFunction.Minimum-Bounding-Circle=Cercle circonscrit
+ui.plugin.analysis.GeometryFunction.Minimum-Bounding-Rectangle=Rectangle englobant minimum
+ui.plugin.analysis.GeometryFunction.Minimum-Diameter=Diam\u00E8tre minimum
