@@ -2283,3 +2283,6 @@ org.openjump.core.ui.plugin.tools.generalization.SimplifyPolygonCoveragePlugIn.S
 org.openjump.core.ui.plugin.tools.generalization.SimplifyPolygonCoveragePlugIn=\#T\:Simplify Polygon Coverage
 org.openjump.core.ui.plugin.tools.generalization.SimplifyPolygonCoveragePlugIn.note=\#T\:Note, if the simplification destroys the topology, then try to simplify iteratively.
 ui.AttributeTab.pan-to-selected-rows=\#T\:Pan to selected rows
+ui.plugin.analysis.GeometryFunction.Minimum-Bounding-Circle=\#T\:Minimum Bounding Circle
+ui.plugin.analysis.GeometryFunction.Minimum-Bounding-Rectangle=\#T\:Minimum Bounding Rectangle
+ui.plugin.analysis.GeometryFunction.Minimum-Diameter=\#T\:Minimum Diameter
