@@ -2269,3 +2269,6 @@ ui.zoom.ZoomPreviousPlugIn.already-at-start=Gi\u00e0 all'inizio
 ui.zoom.ZoomToCoordinatePlugIn.enter-coordinate-to-zoom-to=Inserisici le coordinate per lo zoom\:
 ui.zoom.ZoomTool.zoom-in-out=Zoom avanti/indietro
 ui.AttributeTab.pan-to-selected-rows=Panoramica alle righe selezionate
+ui.plugin.analysis.GeometryFunction.Minimum-Bounding-Circle=\#T\:Minimum Bounding Circle
+ui.plugin.analysis.GeometryFunction.Minimum-Bounding-Rectangle=\#T\:Minimum Bounding Rectangle
+ui.plugin.analysis.GeometryFunction.Minimum-Diameter=\#T\:Minimum Diameter
