@@ -2279,3 +2279,6 @@ org.openjump.plugin.tools.analysis.onelayer.IntersectPolygonsOneLayerPlugIn.Inte
 org.openjump.plugin.tools.analysis.onelayer.IntersectPolygonsOneLayerPlugIn.sDescription=\#T\:Intersects all polygon geometries in a layer. Regions that can be mapped to two source polygons will not contain attributes. Note\: The Planar Graph function provides similar functionality.
 ui.AttributeTab.pan-to-selected-rows=\#T\:Pan to selected rows
 ui.MenuNames.QA=\#T\:QA
+ui.plugin.analysis.GeometryFunction.Minimum-Bounding-Circle=\#T\:Minimum Bounding Circle
+ui.plugin.analysis.GeometryFunction.Minimum-Bounding-Rectangle=\#T\:Minimum Bounding Rectangle
+ui.plugin.analysis.GeometryFunction.Minimum-Diameter=\#T\:Minimum Diameter
