@@ -3626,3 +3626,6 @@ ui.AttributeTab.pan-to-selected-rows=\#T\:Pan to selected rows
 ui.MenuNames.GENERALIZATION=\#T\:Generalization
 ui.MenuNames.GEOPROCESSING=\#T\:Geoprocessing
 ui.MenuNames.PLOT=\#T\:Plot
+ui.plugin.analysis.GeometryFunction.Minimum-Bounding-Circle=\#T\:Minimum Bounding Circle
+ui.plugin.analysis.GeometryFunction.Minimum-Bounding-Rectangle=\#T\:Minimum Bounding Rectangle
+ui.plugin.analysis.GeometryFunction.Minimum-Diameter=\#T\:Minimum Diameter
