@@ -2279,3 +2279,6 @@ ui.zoom.ZoomToCoordinatePlugIn.enter-coordinate-to-zoom-to = Entre com a coorden
 ui.zoom.ZoomTool.zoom-in-out = Ampliar/Reduzir
 ui.AboutDialog.maximum-memory = \#T\:Maximum memory
 ui.AttributeTab.pan-to-selected-rows=\#T\:Pan to selected rows
+ui.plugin.analysis.GeometryFunction.Minimum-Bounding-Circle=\#T\:Minimum Bounding Circle
+ui.plugin.analysis.GeometryFunction.Minimum-Bounding-Rectangle=\#T\:Minimum Bounding Rectangle
+ui.plugin.analysis.GeometryFunction.Minimum-Diameter=\#T\:Minimum Diameter
