@@ -2273,3 +2273,6 @@ ui.zoom.ZoomTool.zoom-in-out = Zoom In/Out
 ui.AboutDialog.maximum-memory = \#T\:Maximum memory
 ui.AttributeTab.pan-to-selected-rows=\#T\:Pan to selected rows
 ui.MultiInputDialog.no-valid-attribute=\#T\:No valid attribute
+ui.plugin.analysis.GeometryFunction.Minimum-Bounding-Circle=\#T\:Minimum Bounding Circle
+ui.plugin.analysis.GeometryFunction.Minimum-Bounding-Rectangle=\#T\:Minimum Bounding Rectangle
+ui.plugin.analysis.GeometryFunction.Minimum-Diameter=\#T\:Minimum Diameter
