@@ -2502,3 +2502,6 @@ org.openjump.core.ui.plugin.tools.statistics.ClassifyAttributesPlugin.Process-nu
 org.openjump.core.ui.plugin.tools.statistics.StatisticOverViewPlugIn.Selected-layer-is-empty=\#T\:Selected layer is empty
 ui.AttributeTab.pan-to-selected-rows=\#T\:Pan to selected rows
 ui.WorkbenchFrame.copy-to-clipboard=\#T\:Mark and copy with <CTRL>+C to the clipboard.
+ui.plugin.analysis.GeometryFunction.Minimum-Bounding-Circle=\#T\:Minimum Bounding Circle
+ui.plugin.analysis.GeometryFunction.Minimum-Bounding-Rectangle=\#T\:Minimum Bounding Rectangle
+ui.plugin.analysis.GeometryFunction.Minimum-Diameter=\#T\:Minimum Diameter
